make sure images don't grow too wide in semantic mode

--- a/semantic.css
+++ b/semantic.css
@@ -114,3 +114,7 @@
 .semantic-view .delete {
     text-decoration: line-through;
 }
+
+.semantic-view img {
+    max-width: 100%;
+}
